# LogX

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Doxyfile  GUIDE.md  LICENSE  Makefile  README.md  make_package.sh
.githooks/: pre-commit
.github/workflows/: build.yml  clang-format-check.yml
benchmarks/: CMakeLists.txt
benchmarks/console_logging/: CMakeLists.txt  main.c
benchmarks/printf_logging/: CMakeLists.txt  main.c
benchmarks/src/: console_logging.c  printf_logging.c
debian/: control  dirs  postinst  rules
examples/: CMakeLists.txt  basic_example.c  load_configuration_from_file.c  logx_cfg.json  logx_cfg.yaml  logx_cfg.yml
examples/basic/: CMakeLists.txt
examples/basic/binary_string/: CMakeLists.txt  main.c
examples/basic/default_settings/: CMakeLists.txt  main.c
examples/basic/log_rate_limiting/: CMakeLists.txt  main.c
examples/basic/parsing_from_custom_file/: CMakeLists.txt  main.c
examples/basic/parsing_from_default_file/: CMakeLists.txt  main.c
examples/basic/passing_configuration/: CMakeLists.txt  main.c
examples/basic/syslog/: CMakeLists.txt  main.c
examples/basic/ts_format_change/: CMakeLists.txt  main.c
examples/binaries/: basic_example  load_configuration_from_file
examples/src/: basic_example_parsing_configuration_from_default_file.c  basic_example_passing_configuration.c
examples/src/basic/: basic_example_default_settings.c  basic_example_parsing_configuration_from_custom_file.c  basic_example_passing_configuration.c  binary_string.c
examples/src/timers/: logx_timer_auto.c  pause_resume_timer.c  simple_stopwatch_timer.c
examples/timers/: CMakeLists.txt
examples/timers/pause_resume_timer/: CMakeLists.txt  main.c
examples/timers/stopwatch_timer/: CMakeLists.txt  main.c
examples/timers/timer_auto/: CMakeLists.txt  main.c
include/logx/: logx.h  logx_config_keys.h  logx_defaults.h  logx_timers.h  version.h
include/logxd/: dispatcher.h  logx_cli.h  logxd.h  reaper.h  session.h
logx/: CMakeLists.txt  logx.c  logx.h  logx_api.c  logx_common.c  logx_common.h  logx_config.c  logx_config.h  logx_config_keys.c  logx_config_keys.h  logx_defaults.h  logx_errorcodes.def  logx_errorcodes.h  logx_helpers.c  logx_rotation.c  logx_rotation.h  logx_string_maps.c  logx_string_maps.h  logx_time.c  logx_time.h  logx_timers.c  logx_types.h  version.h
releases/1.2.0/benchmarks/: console_logging  printf_logging
releases/1.2.0/examples/: binary_string  default_settings  logx_rate_limiting  parsing_from_custom_file  parsing_from_default_file  passing_configuration  pause_resume_timer  stopwatch_timer  timer_auto  ts_format_change
releases/2.0.0/benchmarks/: console_logging  printf_logging
releases/2.0.0/examples/: binary_string  default_settings  logx_rate_limiting  parsing_from_custom_file  parsing_from_default_file  passing_configuration  pause_resume_timer  stopwatch_timer  syslog_example  timer_auto  ts_format_change
scripts/: check-format-style.sh  logxd_postinst  logxd_postrm  logxd_prerm  make_package.sh
src/: logx.c  logx_api.c  logx_cli.c  logx_config_keys.c  logx_timers.c
src/logx/: logx.c  logx_api.c  logx_config_keys.c  logx_timers.c
src/logxd/: dispatcher.c  logx_cli.c  logxd.c  logxd.service  logxd.sh  main.c  reaper.c  session.c
